# tfgs-api-gatherer

./: .flake8  .gitignore  crawl.py  pyproject.toml  reindex.py
app/: crawl.py  locustfile.py  main.py  reindex.py
queries/: insert_adulttheme.sql  insert_adulttheme_game.sql  insert_author.sql  insert_author_game.sql  insert_contentrating.sql  insert_download.sql  insert_engine.sql  insert_game.sql  insert_multimediatheme.sql  insert_multimediatheme_game.sql  insert_review.sql  insert_transformationtheme.sql  insert_transformationtheme_game.sql  list_author.sql  list_contentrating.sql  list_engine.sql
