[tool.poetry]
name = "tfgs-api-gatherer"
version = "0.1.0"
description = ""
authors = ["cobaltcore <cobaltcore@yandex.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi-contrib = "^0.2.10"
pymongo = "^3.11.4"
pony = "^0.7.14"
pytz = "^2021.1"
motor = "^2.4.0"
psycopg2-binary = "^2.8.6"
uvicorn = "^0.13.4"
fastapi-utils = "^0.2.1"
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.9.3"
arrow = "^1.1.0"
python-dotenv = "^0.17.1"
lxml = "^4.6.3"
Whoosh = "^2.7.4"
tqdm = "^4.60.0"
rich = "^10.1.0"
requests = "^2.25.1"
pugsql = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
